--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
         font-size: 11px;
         text-align: center;
       }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
     </style>
   </head>
   <body>
@@ -33,21 +30,23 @@
           <img src="./images/logo.svg" alt="Easybank" />
         </a>
 
-        <a href="#" class="header__menu">
+        <a href="#" class="header__menu hide-for-desktop">
           <span></span>
           <span></span>
           <span></span>
         </a>
-        <div class="header__links">
+        <div class="header__links hide-for-mobile">
           <a href="#">Home</a>
           <a href="#">About</a>
           <a href="#">Contact</a>
           <a href="#">Blog</a>
           <a href="#">Careers</a>
         </div>
+
+        <a href="#" class="button header__invite hide-for-mobile">Request Invite</a>
       </nav>
     </header>
-    Home About Contact Blog Careers Request Invite Next generation digital
+    <!-- Home About Contact Blog Careers Request Invite Next generation digital
     banking Take your financial life online. Your Easybank account will be a
     one-stop-shop for spending, saving, budgeting, investing, and much more.
     Request Invite Why choose Easybank? We leverage Open Banking to turn your
@@ -70,13 +69,12 @@
     Robinson Our invite-only Beta accounts are now live! After a lot of hard
     work by the whole team, we’re excited to launch our closed beta. It’s easy
     to request an invite through the site ... About Us Contact Blog Careers
-    Support Privacy Policy Request Invite © Easybank. All Rights Reserved
+    Support Privacy Policy Request Invite © Easybank. All Rights Reserved -->
 
     <div class="attribution">
-      Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+        ></a
+      > <a href="#"></a>.
     </div>
 
     <script src="./app/script.js"></script>
