--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
     </style>
   </head>
   <body>
-    <header>
+    <header class="header">
+      <div class="overlay"></div>
       <nav class="flex flex-jc-sb flex-ai-c">
         <a href="/" class="header__logo">
           <img src="./images/logo.svg" alt="Easybank" />
         </a>
 
-        <a href="#" class="header__menu hide-for-desktop">
+        <a href="#" class="header__menu hide-for-desktop" id="hamburger">
           <span></span>
           <span></span>
           <span></span>
@@ -46,7 +47,7 @@
         <a href="#" class="button header__invite hide-for-mobile">Request Invite</a>
       </nav>
     </header>
-    <!-- Home About Contact Blog Careers Request Invite Next generation digital
+    Home About Contact Blog Careers Request Invite Next generation digital
     banking Take your financial life online. Your Easybank account will be a
     one-stop-shop for spending, saving, budgeting, investing, and much more.
     Request Invite Why choose Easybank? We leverage Open Banking to turn your
@@ -69,7 +70,7 @@
     Robinson Our invite-only Beta accounts are now live! After a lot of hard
     work by the whole team, we’re excited to launch our closed beta. It’s easy
     to request an invite through the site ... About Us Contact Blog Careers
-    Support Privacy Policy Request Invite © Easybank. All Rights Reserved -->
+    Support Privacy Policy Request Invite © Easybank. All Rights Reserved
 
     <div class="attribution">
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
