--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <header class="header">
       <div class="overlay has__fade"></div>
-      <nav class="container flex flex-jc-sb flex-ai-c">
+      <nav class="container container__p--all flex flex-jc-sb flex-ai-c">
         <a href="/" class="header__logo">
           <img src="./images/logo.svg" alt="Easybank" />
         </a>
@@ -57,6 +57,20 @@
         <a href="http://">Careers</a>
       </div>
     </header>
+    <section class="hero">
+      <div class="container">
+        <div class="hero__image"></div>
+        <div class="hero__text container__p--all">
+          <h1>Next generation digital banking!!!!</h1>
+          <p>
+            Take your finacial life online.Your Easybank acccount will be a
+            one-stop-shop for spending, saving, budgeting, investing and much
+            more.
+          </p>
+          <a href="" class="button">Request Invite</a>
+        </div>
+      </div>
+    </section>
     Home About Contact Blog Careers Request Invite Next generation digital
     banking Take your financial life online. Your Easybank account will be a
     one-stop-shop for spending, saving, budgeting, investing, and much more.
